--- a/WebProjekt/css/historystyle.css
+++ b/WebProjekt/css/historystyle.css
@@ -7,7 +7,9 @@ body {
 	margin: 20px 300px 20px 300px;
 	/*background-color: darkblue;*/
 	background-image: url("../img/background.jpg");
-	position: sticky;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100% 100%;
 }
 
 /* Header/Blog Title */
