--- a/WebProjekt/css/indexstyle.css
+++ b/WebProjekt/css/indexstyle.css
@@ -4,9 +4,12 @@
 body {
 	font-family: Arial;
 	background-size: cover;
-  	margin: 20px 300px 20px 300px;
+	margin: 20px 300px 20px 300px;
 	/*background-color: darkblue;*/
 	background-image: url("../img/background.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100% 100%;
 }
 
 /* Header/Blog Title */
