--- a/WebProjekt/css/historystyle.css
+++ b/WebProjekt/css/historystyle.css
@@ -11,7 +11,14 @@ body {
 	background-attachment: fixed;
 	background-size: 100% 100%;
 }
-
+.header{
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+}
+.footer{
+ border-bottom-left-radius: 25px;
+ border-bottom-right-radius: 25px;
+}
 /* Header/Blog Title */
 #logo-left{
 	float: left;
